# project_euler

./: README.md  pyproject.toml
solutions/: test.ipynb
solutions/001-050/: p001_multiples_of_3_or_5.py  p002_even_fibonacci_numbers.py  p003_largest_prime_factor.py  p004_largest_palindrome_product.py  p005_smallest_multiple.py  p006_sum_square_difference.py  p007_10_001st_prime.py  p008_largest_product_in_a_series.py  p009_special_pythagorean_triplet.py  p010_summation_of_primes.py  p011_largest_product_in_grid.py  p012_highly_divisible_triangular_number.py  p013_large_sum.py  p014_longest_collatz_sequence.py  p015_lattice_paths.py  p016_power_digit_sum.py  p017_number_letter_counts.py  p018_maximum_path_sum_i.py  p019_counting_sundays.py  p020_factorial_digit_sum.py  p021_amicable_numbers.py  p022_names_scores.py  p023_non_abundant_sums.py  p024_lexicographic_permutations.py  p025_1000_digit_fibonacci_number.py  p026_reciprocal_cycles.py  p027_quadratic_primes.py  p028_number_spiral_diagonals.py  p029_distinct_powers.py  p030_digit_fifth_powers.py
solutions/TODO/: p004_largest_palindrome_product.py  p005_smallest_multiple.py  p006_sum_square_difference.py  p007_10001st_prime.py  p008_largest_product_in_a_series.py  p009_special_pythagorean_triplet.py  p010_summation_of_primes.py  p011_largest_product_in_a_grid.py  p012_highly_divisible_triangular_number.py  p013_large_sum.py  p014_longest_collatz_sequence.py  p015_lattice_paths.py  p016_power_digit_sum.py  p017_number_letter_counts.py  p018_maximum_path_sum_i.py  p019_counting_sundays.py  (+968 more)
utils/: math_helper.py
